[fix] Readability of counter on main nav

--- a/template/assets/css/template_override.scss
+++ b/template/assets/css/template_override.scss
@@ -119,7 +119,7 @@ h1 {
 
     .menuItem {
       button {
-        padding: 0.9375em 1.25em !important;
+        padding: 0.9375em 0 !important;
       }
     }
 
@@ -159,6 +159,10 @@ h1 {
       .meta {
         background: $white;
         color: $independance;
+        font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, Verdana, sans-serif;
+        font-size: .7rem;
+        font-weight: bold;
+        top: .3em;
       }
 
       a {
